test/corpus/arrays.txt
====
Strands
====

8_8.7_2/10

---

(source_file
  (strand
    (literal (number (integer)))
    (literal (number (decimal)))
    (literal (number (fraction (integer) (integer))))
  )
)

====
Box Array
====

{"string" 888 @3}

---

(source_file
  (box_array (body
    (literal (string))
    (literal (number (integer)))
    (literal (char))
  ))
)

====
Nested Arrays
====

[2_3 6_7 0_5]

[{"hello" "world"} 1 2 3]

---

(source_file
  (array (body
    (strand
      (literal (number (integer)))
      (literal (number (integer)))
    )
    (strand
      (literal (number (integer)))
      (literal (number (integer)))
    )
    (strand
      (literal (number (integer)))
      (literal (number (integer)))
    )
  ))

  (array (body
    (box_array (body
      (literal (string))
      (literal (string))
    ))
    (literal (number (integer)))
    (literal (number (integer)))
    (literal (number (integer)))
  ))
)

====
Functions in Arrays
====

[+×2] 20 2

---

(source_file
  (array (body
    (primitive (dyadic_primitive))
    (primitive (dyadic_primitive))
    (literal (number (integer)))
  ))
  (literal (number (integer)))
  (literal (number (integer)))
)
