test/corpus/modifiers.txt
====
Modifiers
====

≡(+⇌.)
\+ 1_2

---

(source_file
  (modifier_function (monadic_modifier (monadic_glyph_modifier))
    (inline_function (body
      (primitive (dyadic_glyph))
      (primitive (monadic_glyph))
      (primitive (stack_glyph))
    ))
  )

  (modifier_function (monadic_modifier (monadic_glyph_modifier))
    (primitive (dyadic_glyph))
  )
  (strand
    (literal (number (integer)))
    (literal (number (integer)))
  )
)

====
Nested
====

°⍜≡⇌(⤸2)

---

(source_file
  (modifier_function (monadic_modifier (monadic_glyph_modifier))
    (modifier_function (dyadic_modifier (dyadic_glyph_modifier))
      (modifier_function (monadic_modifier (monadic_glyph_modifier))
        (primitive (monadic_glyph))
      )
      (inline_function (body
        (primitive (dyadic_glyph))
        (literal (number (integer)))
      ))
    )
  )
)

====
Function Pack
====

⊃(⊃(/+|\×)⊟|-|×) 3 4

---

(source_file
  (modifier_function (dyadic_modifier (dyadic_glyph_modifier))
    (function_pack
      (body
        (modifier_function (dyadic_modifier (dyadic_glyph_modifier))
          (function_pack
            (body
              (modifier_function (monadic_modifier (monadic_glyph_modifier)) 
                (primitive (dyadic_glyph))
              )
            )
            (body
              (modifier_function (monadic_modifier (monadic_glyph_modifier)) 
                (primitive (dyadic_glyph))
              )
            )
          )
        )
        (primitive (dyadic_glyph))
      )
      (body (primitive (dyadic_glyph)))
      (body (primitive (dyadic_glyph)))
    )
  )
  (literal (number (integer)))
  (literal (number (integer)))
)
